@@ -1,8 +1,11 @@
-(** Testing display of extensible variant types.
+(** Testing display of extensible variant types and exceptions.
 
    @test_types_display
  *)
 
+(** Also check reference for {!M.A}, {!M.B}, {!M.C} and {!E} *)
+
+(** Extensible type *)
 type e = ..
 
 module M = struct
@@ -18,3 +21,5 @@ module type MT = sig
   | B (** B doc *)
   | C (** C doc *)
 end
+
+exception E
